--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,10 @@
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
-        Options MultiViews
+        Options -MultiViews
     </IfModule>
 
     #AllowOverride All
-    #RewriteEngine On
+    RewriteEngine On
     #RewriteRule ^(.*)$ public/$1 [L]
 
     # Redirect Trailing Slashes If Not A Folder...
